test/org/midica/testfiles/failing/var-assigner-double.midica
INSTRUMENTS
	0    PERCUSSIVE_ORGAN       PERCUSSIVE_ORGAN
END

VAR $x==100

0  c  /4  v=$x
